--- a/Pai Gustavo/SoftwarePAI/PaiApp/static/frontweb/css/cierremensual-style.css
+++ b/Pai Gustavo/SoftwarePAI/PaiApp/static/frontweb/css/cierremensual-style.css
@@ -131,6 +131,9 @@ button {
     grid-template-columns: 5;
     grid-template-rows: 1;
     color: var(--negro);
+    margin-left: 2rem;
+    margin-top: 1rem;
+    margin-right: 2rem;
 }
 
 @media (min-width: 768px) {
